# paradox-doodle

./: .gitignore  Cargo.toml  README.md  map_equi.py
src/: camera.rs  framework.rs  lib.rs  main.rs  scene.rs  shader.wgsl
src/assets/images/: generation.bash
