[package]
name = "doodle"
version = "0.1.0"
edition = "2021"

[dependencies]
log = "0.4"
env_logger = "0.11"
cfg-if = "1"
web-time = "0.2.4"

pollster = "0.3"
fern = "0.6"

winit = { version = "0.29", features = ["android-native-activity"] }
glam = "0.28"
wgpu = { version = "23.0.0", features = ["wgsl", "dx12", "metal"] }

ktx2 = "0.3"

# wasm32
wasm-bindgen = "0.2.95"
wasm-bindgen-futures = "0.4.45"
web-sys = { version = "0.3.72", features = [
  "Location",
  "Blob",
  "RequestInit",
  "RequestMode",
  "Request",
  "ImageData",
  "Response",
  "HtmlImageElement",
  "WebGl2RenderingContext",
  "CanvasRenderingContext2d",
] }

obj = "0.10"
bytemuck = { version = "1.19", features = ["derive"] }
anyhow = "1.0.93"
